--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,7 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+API_PUBLIC_KEY=
+
+APP_FRONT_URL=http://localhost:3000
